Update about and contact

--- a/about.html
+++ b/about.html
@@ -33,9 +33,18 @@
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
       <h1>About page</h1>
+      <h2>Our Mission</h2>
+      <p1>To foster an active, healthy ecosystem in Northwestern and Chicago 
+        as well as solidify our community on the map as a strong hub for blockchain 
+        technology.</p1>
+    </div>
+    <div class = "containers">
+    
     </div>
 
+
   </div> <!-- /container -->
+  
 
 
   <!-- Bootstrap core JavaScript
