--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,14 @@
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
       <h1>Contact page</h1>
+      <h2>Contact information:</h2>
+      <p1>Email address: blockchaingroup.nu@gmail.com</p1>
+      <br>
+      <p2>Instagram: nublockchain</p2>
+      <br>
+      <p3>Facebook: @nublockchain</p3>
+      <br>
+      <p4>Twitter: @NU_Blockchain</p4>
     </div>
 
   </div> <!-- /container -->
